gcc/testsuite/gdc.test/fail_compilation/fail7524b.d
// 7524

#line 47 __VERSION__
